# jury-gen

./: .gitignore  README.md  Workbook.ipynb  api_client.py  pyproject.toml  step_client.py
bootstrap/remote-state/: README.md  main.tf  outputs.tf
docs/: WORKFLOW.md
example/: input.json
examples/one/: Joint Pretrial Stipulation - Draft (3).docx  files.json  sfn_events.json
examples/one/inputs/: enrich_legal_item-001.json  enrich_legal_item-002.json  enrich_legal_item-003.json  enrich_legal_item-004.json  enrich_legal_item-005.json  enrich_legal_item-006.json  extract_case_facts-001.json  extract_legal_claims-001.json  extract_legal_claims-002.json  extract_witnesses-001.json  generate_instructions-001.json
examples/two/: files.json  sfn_events.json
examples/two/inputs/: enrich_legal_item-001.json  enrich_legal_item-002.json  enrich_legal_item-003.json  enrich_legal_item-004.json  enrich_legal_item-005.json  enrich_legal_item-006.json  enrich_legal_item-007.json  extract_case_facts-001.json  extract_legal_claims-001.json  extract_legal_claims-002.json  extract_witnesses-001.json  generate_instructions-001.json
lambdas/api_export_docx/: Dockerfile  main.py
lambdas/api_signer/: main.py
lambdas/api_start/: main.py
lambdas/api_status/: main.py
lambdas/enrich_legal_item/: enrichment_processing.py  main.py
lambdas/extract_case_facts/: case_facts_processing.py  main.py
lambdas/extract_legal_claims/: Dockerfile  claims_processing.py  main.py
lambdas/extract_witnesses/: main.py  witness_processing.py
lambdas/generate_instructions/: Dockerfile  instruction_processing.py  main.py
lambdas/job_handle_error/: main.py
lambdas/job_save_results/: main.py
lambdas/job_start/: main.py
lambdas/textract_check_status/: main.py
lambdas/textract_get_results/: Dockerfile  main.py
lambdas/textract_start/: main.py
scripts/: extract_lambda_inputs.py  run_api.py  run_lambda_local.py  ui_app.py
terraform/: api_gateway.tf  backend.tf  ci.tf  data.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  provider.tf  random.tf  s3.tf  step_functions.tf  variables.tf  web_frontend.tf
terraform/buildspec/: docker.yml  lint.yml  tf-apply.yml  tf-plan.yml  web-deploy.yml
terraform/data/: claims.json  standard_jury_instructions.json
terraform/environments/dev/: backend.tf  main.tf  outputs.tf  provider.tf
terraform/environments/prod/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
