[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "jury-gen"
version = "0.1.0"
description = "Utilities and infra for jury generation workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Riley" }]
license = { text = "Proprietary" }
dependencies = []

[tool.uv]
package = false

[tool.uv.scripts]
# Open the local web UI
ui = "streamlit run scripts/ui_app.py"

# Generic CLI runner; pass args after --
# Example: uv run lambda -- --lambda extract_legal_claims --example one --region us-east-1
lambda = "python scripts/run_lambda_local.py"

# Build input payloads from Step Functions history (examples/one)
extract-one = "python scripts/extract_lambda_inputs.py --history examples/one/sfn_events.json --lambdas enrich_legal_item extract_case_facts extract_legal_claims extract_witnesses generate_instructions --outdir examples/one/inputs --write-files"

# Build input payloads from Step Functions history (examples/two)
extract-two = "python scripts/extract_lambda_inputs.py --history examples/two/sfn_events.json --lambdas enrich_legal_item extract_case_facts extract_legal_claims extract_witnesses generate_instructions --outdir examples/two/inputs --write-files"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "requests>=2.32.3",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  ".venv",
  "**/*.ipynb",
  "**/.ipynb_checkpoints",
  "bootstrap",
  "terraform",
]

[tool.ruff.lint]
select = ["E","F","I","B","UP","PL","SIM","C4","PERF","RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "boto3>=1.41.5",
    "streamlit>=1.51.0",
]
